--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,11 +5,9 @@
         <meta name="viewport" content="width-device-width initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <body>
-        Before
-        <br>
+        <%- include('../partials/header.ejs') %>
+  
         <%- body %>
-        <br>
-        After
     </body>    
     </head>
     </html>
